
[*] Mon May  6 2002 - netcat v0.3.0

  o Fixed netcat_resolvehost() to be more library function.
  o Added function netcat_socket_new() to network.c
  o Added functions netcat_socket_new_listen() and netcat_socket_accept()
    to network.c
  o configure now checks for important gettext external data.
  o Updated files INSTALL and COPYING
  o Added function netcat_inet_ntop() to network.c
  o Fixed backward incompatibility in netcat_fhexdump()
  o Added file doc/migration.
  o Fully rewrote the core part of the project.  The new core has total
    async I/O support and is totally select() based.  It also introduces
    a new command line arguments parsing style.  See the doc/migration
    file for more information.
  o Fixed the delayed (-i) output sending not displaying incoming data
    immediately.
  o Verbose messages are now printed automatically in debug mode.
  o Changed copyrighter name
  o Added command line switch `-L', activates the tunnel mode to
    the host and port specified on the command line.
  o Added function netcat_inet_pton() to network.c
  o Added function ncprint() to misc.c, this allows a more powerful
    output management and a more readability of the source code.
  o Lots of fixes and improvements for portability


[*] Wed May  1 2002 - netcat v0.2.2

  o More fixes around the NLS (added the missing config.rpath script)
  o Added lib directory that will contain all netcat related libraries.
  o Added compatibility support (libcontrib) containing all the needed
    functions not provided by the OS.
  o Added GNU getopt to the compat library.
  o More changes to the netcat_getport() function. Now it should catch
    every kind of invalid input safely.


[*] Tue Apr 30 2002 - netcat v0.2.1

  o Various fixes to the Makefiles for the clean targets
  o Fixed --enable-debug configure parameter
  o Added configure option `--enable-oldhexdump', causes netcat to use the
    old hexdump style rather than my new style.